--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Brandon La Rue</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
-    <link rel="icon" href="/favicon.png">
+    <link rel="icon" href="images/favicon.png">
 </head>
 <body>
     
